AM_CFLAGS = -Wall

bin_PROGRAMS = flvmeta

flvmeta_SOURCES = amf.c \
                  amf.h \
                  avc.c \
                  avc.h \
                  dump.c \
                  dump.h \
                  flv.c \
                  flv.h \
                  flvmeta.c \
                  flvmeta.h \
                  json.c \
                  json.h \
                  types.c \
                  types.h \
                  inject.c \
                  inject.h

EXTRA_DIST =      CMakeLists.txt \
                  compat/gettext.h \
                  compat/getopt.h \
                  compat/getopt.c \
                  compat/getopt1.c
